src/test/ui/impl-trait/region-escape-via-swap.stderr
error[E0623]: lifetime mismatch
  --> $DIR/region-escape-via-swap.rs:17:50
   |
LL | fn hide<'a, 'b, T: 'static>(x: &'a mut &'b T) -> impl Swap + 'a {
   |                                        -----     ^^^^^^^^^^^^^^
   |                                        |         |
   |                                        |         ...but data from `x` is returned here
   |                                        this parameter and the return type are declared with different lifetimes...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
